--- a/index.html
+++ b/index.html
@@ -117,6 +117,25 @@
   </div>
 
   <script>
+function saveFlights() {
+  localStorage.setItem("flights", JSON.stringify(flights));
+}
+
+function loadFlights() {
+  const saved = localStorage.getItem("flights");
+  if (saved) {
+    const parsed = JSON.parse(saved);
+    flights.push(...parsed);
+    updateFlightList();
+  }
+}
+
+function clearFlights() {
+  flights.length = 0;
+  localStorage.removeItem("flights");
+  updateFlightList();
+}
+
     const flights = [];
 
     function addFlight() {
@@ -131,6 +150,7 @@
         destination = "Any (Long layover in Europe)";
         duration = "70";
     }
+
     if (!destination || isNaN(flightsCount) || !duration) {
         alert("Please fill in all flight fields correctly.");
         return;
@@ -235,6 +255,7 @@
       document.getElementById("destination").disabled = isChecked;
       document.getElementById("duration").disabled = isChecked;
     });
+loadFlights();
 </script>
 </body>
 </html>
