--- a/index.html
+++ b/index.html
@@ -3,74 +3,157 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roaster4Mint</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            padding: 20px;
+            background-color: #f8f9fa;
+        }
+        .container {
+            max-width: 600px;
+            margin: auto;
+        }
+        h1 {
+            text-align: center;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .card {
+            margin-top: 10px;
+        }
+        .result-list {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Roaster4Mint Logo" class="logo">
+    <div class="container">
         <h1>Roaster4Mint</h1>
-    </header>
-    <main>
-        <div class="input-form">
-            <label>Destination:
-                <select id="destination">
-                    <option value="Munich">Munich</option>
-                    <option value="Düsseldorf">Düsseldorf</option>
-                    <option value="Frankfurt">Frankfurt</option>
-                    <option value="London">London</option>
-                    <option value="Manchester">Manchester</option>
-                    <option value="Lissabon">Lissabon</option>
-                    <option value="Kopenhagen">Kopenhagen</option>
-                    <option value="Madrid">Madrid</option>
-                    <option value="Barcelona">Barcelona</option>
-                    <option value="Wien">Wien</option>
-                    <option value="Zürich">Zürich</option>
-                    <option value="Paris">Paris</option>
-                    <option value="Asien">Asien</option>
+        <div class="card p-4 shadow-sm">
+            <div class="mb-3">
+                <label for="destination" class="form-label">Destination:</label>
+                <select id="destination" class="form-select">
+                    <option>Munich</option>
+                    <option>Düsseldorf</option>
+                    <option>Frankfurt</option>
+                    <option>London</option>
+                    <option>Manchester</option>
+                    <option>Lissabon</option>
+                    <option>Kopenhagen</option>
+                    <option>Madrid</option>
+                    <option>Barcelona</option>
+                    <option>Wien</option>
+                    <option>Zürich</option>
+                    <option>Paris</option>
+                    <option>Asien</option>
                 </select>
-            </label>
-            <label>Flights: <input type="number" id="flights" min="1"></label>
-            <label>Duration:
-                <select id="duration">
-                    <option value="24">24h</option>
-                    <option value="48">48h</option>
-                    <option value="50">50h</option>
-                    <option value="70">70h</option>
-                    <option value="24-48">24–48h</option>
-                    <option value="48-70">48–70h</option>
+            </div>
+            <div class="mb-3">
+                <label for="flights" class="form-label">Flights:</label>
+                <input type="number" id="flights" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="duration" class="form-label">Duration:</label>
+                <select id="duration" class="form-select">
+                    <option>24</option>
+                    <option>48</option>
+                    <option>50</option>
+                    <option>70</option>
+                    <option>24 bis 48</option>
+                    <option>48 bis 70</option>
                 </select>
-            </label>
-            <label><input type="checkbox" id="weekend"> Weekend Flight</label>
-            <label>Bonus:
-                <select id="bonus">
+            </div>
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="weekend">
+                <label class="form-check-label" for="weekend">Weekend Flight</label>
+            </div>
+            <div class="mb-3">
+                <label for="bonus" class="form-label">Bonus:</label>
+                <select id="bonus" class="form-select">
                     <option value="0">No Priority</option>
                     <option value="25">Low Priority (+25)</option>
                     <option value="50">Medium Priority (+50)</option>
                     <option value="75">High Priority (+75)</option>
                     <option value="100">Very High Priority (+100)</option>
                 </select>
-            </label>
-            <button onclick="addFlight()">Add Flight</button>
-            <button onclick="clearFlights()">Clear All</button>
+            </div>
+            <button class="btn btn-success w-100 mb-2" onclick="addFlight()">Add Flight</button>
+            <button class="btn btn-secondary w-100" onclick="clearAll()">Clear All</button>
         </div>
-        <div class="flight-list" id="flightList"></div>
-        <div class="results" id="results">
-            <h2>Result</h2>
-            <ul id="resultList">
-                <li><strong>100:</strong> –</li>
-                <li><strong>90:</strong> –</li>
-                <li><strong>80:</strong> –</li>
-                <li><strong>70:</strong> –</li>
-                <li><strong>60:</strong> –</li>
-                <li><strong>50:</strong> –</li>
-                <li><strong>40:</strong> –</li>
-                <li><strong>30:</strong> –</li>
-                <li><strong>20:</strong> –</li>
-                <li><strong>10:</strong> –</li>
-            </ul>
+
+        <div id="flightList" class="mt-4"></div>
+        <div class="result-list mt-4">
+            <h5>Result</h5>
+            <ul id="results"></ul>
         </div>
-    </main>
-    <script src="script.js"></script>
+    </div>
+
+    <script>
+        let flights = [];
+
+        function addFlight() {
+            const destination = document.getElementById("destination").value;
+            const flightCount = parseInt(document.getElementById("flights").value);
+            const duration = document.getElementById("duration").value;
+            const weekend = document.getElementById("weekend").checked;
+            const bonus = parseInt(document.getElementById("bonus").value);
+
+            if (!flightCount) return;
+
+            flights.push({ destination, flightCount, duration, weekend, bonus });
+            updateDisplay();
+        }
+
+        function clearAll() {
+            flights = [];
+            updateDisplay();
+        }
+
+        function removeFlight(index) {
+            flights.splice(index, 1);
+            updateDisplay();
+        }
+
+        function updateDisplay() {
+            const list = document.getElementById("flightList");
+            const result = document.getElementById("results");
+            list.innerHTML = "";
+            result.innerHTML = "";
+
+            flights.forEach((f, i) => {
+                const item = document.createElement("div");
+                item.className = "card card-body";
+                item.innerHTML = `
+                    <strong>${f.destination}</strong><br>
+                    ${f.flightCount} flights, ${f.duration}h<br>
+                    ${f.weekend ? "Weekend" : "All Days"}, Bonus: ${f.bonus}
+                    <button class="btn btn-danger btn-sm mt-2" onclick="removeFlight(${i})">Remove</button>
+                `;
+                list.appendChild(item);
+            });
+
+            const scoreMap = {};
+            for (let i = 10; i <= 100; i += 10) {
+                scoreMap[i] = [];
+            }
+
+            flights.forEach(f => {
+                for (let i = 10; i <= 100; i += 10) {
+                    const probability = (f.flightCount / 100) * i + f.bonus;
+                    if (probability >= i) {
+                        scoreMap[i].push(`${f.destination}, ${f.flightCount} flights, ${f.duration}h${f.weekend ? ', Weekend' : ', All Days'}, Bonus: ${f.bonus}`);
+                    }
+                }
+            });
+
+            for (let i = 100; i >= 10; i -= 10) {
+                const li = document.createElement("li");
+                li.innerHTML = `<strong>${i}:</strong> ${scoreMap[i].length > 0 ? scoreMap[i].join(" | ") : "–"}`;
+                result.appendChild(li);
+            }
+        }
+    </script>
 </body>
 </html>
