--- a/index.html
+++ b/index.html
@@ -1,50 +1,57 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Roaster4Mint</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Roaster4Mint</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Roaster4Mint</h1>
-    <div class="input-section">
-      <label>Destination:
+    <div class="container">
+        <h1>Roaster4Mint</h1>
+        <label for="destination">Destination:</label>
         <select id="destination">
-          <option value="">Select destination</option>
-          <option value="Munich">Munich</option>
-          <option value="Madrid">Madrid</option>
-          <option value="Kopenhagen">Kopenhagen</option>
-          <option value="London">London</option>
-          <option value="Long Layover in Europe">Long Layover in Europe</option>
+            <option value="" selected>Select destination</option>
+            <option value="Munich">Munich</option>
+            <option value="Madrid">Madrid</option>
+            <option value="Copenhagen">Copenhagen</option>
+            <option value="London">London</option>
+            <option value="Long Layover in Europe">Long Layover in Europe</option>
         </select>
-      </label>
-      <label>Flights: <input type="number" id="flights" /></label>
-      <label>Layover time:
+
+        <label for="flights">Flights:</label>
+        <input type="number" id="flights" placeholder="">
+
+        <label for="duration">Layover time:</label>
         <select id="duration">
-          <option value="">Select duration</option>
-          <option value="24">24</option>
-          <option value="48">48</option>
-          <option value="70">70</option>
+            <option value="" selected>Select duration</option>
+            <option value="24">24</option>
+            <option value="48">48</option>
+            <option value="70">70</option>
         </select>
-      </label>
-      <label><input type="checkbox" id="weekend"/> Weekend Flight</label>
-      <label>Bonus:
+
+        <label>
+            <input type="checkbox" id="weekend"> Weekend Flight
+        </label>
+
+        <label for="bonus">Bonus:</label>
         <select id="bonus">
-          <option value="0">No Priority</option>
-          <option value="25">Low Priority (+25)</option>
-          <option value="50">Medium Priority (+50)</option>
-          <option value="75">High Priority (+75)</option>
-          <option value="100">Very High Priority (+100)</option>
+            <option value="0">No Priority</option>
+            <option value="25">Low Priority (+25)</option>
+            <option value="50">Medium Priority (+50)</option>
+            <option value="75">High Priority (+75)</option>
+            <option value="100">Very High Priority (+100)</option>
         </select>
-      </label>
-      <button id="addBtn">Add Flight</button>
-      <button id="clearBtn">Clear All</button>
+
+        <div class="buttons">
+            <button onclick="addFlight()" class="add">Add Flight</button>
+            <button onclick="clearAll()" class="clear">Clear All</button>
+        </div>
+
+        <div id="flights-list"></div>
+        <h2>Result</h2>
+        <ul id="result-list"></ul>
     </div>
-    <div id="flightList"></div>
-    <div id="result"><h3>Result</h3></div>
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
