--- a/index.html
+++ b/index.html
@@ -1,57 +1,50 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Roaster4Mint</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Flight Preference Planner</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Roaster4Mint</h1>
-        <label for="destination">Destination:</label>
+  <div class="app">
+    <h1>Flight Preference Planner</h1>
+    <div class="form">
+      <label>Destination:
         <select id="destination">
-            <option value="" selected>Select destination</option>
-            <option value="Munich">Munich</option>
-            <option value="Madrid">Madrid</option>
-            <option value="Copenhagen">Copenhagen</option>
-            <option value="London">London</option>
-            <option value="Long Layover in Europe">Long Layover in Europe</option>
+          <option value="">Select destination</option>
+          <option value="Munich">Munich</option>
+          <option value="Vienna">Vienna</option>
+          <option value="Copenhagen">Copenhagen</option>
+          <option value="Zurich">Zurich</option>
+          <option value="Madrid">Madrid</option>
+          <option value="Barcelona">Barcelona</option>
+          <option value="London">London</option>
+          <option value="Dusseldorf">Dusseldorf</option>
+          <option value="Frankfurt">Frankfurt</option>
+          <option value="Asia">Asia</option>
+          <option value="Layover Long Europe">Layover Long Europe</option>
         </select>
-
-        <label for="flights">Flights:</label>
-        <input type="number" id="flights" placeholder="">
-
-        <label for="duration">Layover time:</label>
-        <select id="duration">
-            <option value="" selected>Select duration</option>
-            <option value="24">24</option>
-            <option value="48">48</option>
-            <option value="70">70</option>
+      </label>
+      <label>Number of Flights:
+        <input type="number" id="flights" min="1" />
+      </label>
+      <label>Your Priority:
+        <select id="priority">
+          <option value="0">No Priority</option>
+          <option value="0.1">Low</option>
+          <option value="0.2">Medium</option>
+          <option value="0.3">High</option>
+          <option value="0.5">Very High</option>
         </select>
-
-        <label>
-            <input type="checkbox" id="weekend"> Weekend Flight
-        </label>
-
-        <label for="bonus">Bonus:</label>
-        <select id="bonus">
-            <option value="0">No Priority</option>
-            <option value="25">Low Priority (+25)</option>
-            <option value="50">Medium Priority (+50)</option>
-            <option value="75">High Priority (+75)</option>
-            <option value="100">Very High Priority (+100)</option>
-        </select>
-
-        <div class="buttons">
-            <button onclick="addFlight()" class="add">Add Flight</button>
-            <button onclick="clearAll()" class="clear">Clear All</button>
-        </div>
-
-        <div id="flights-list"></div>
-        <h2>Result</h2>
-        <ul id="result-list"></ul>
+      </label>
+      <button onclick="addFlight()">Add Flight</button>
+      <button onclick="clearAll()">Clear All</button>
     </div>
-    <script src="script.js"></script>
+    <div id="flightList"></div>
+    <h2>Optimized Preference Plan</h2>
+    <ol id="resultList"></ol>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
